<resources>
    <string name="app_name">Cromograme</string>
    <string name="estudar">Estudar</string>
    <string name="jogar">Jogar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_estudo_div_cel">EstudoDivCelActivity</string>
    <string name="title_activity_estudo_citogenetica">EstudoCitogeneticaActivity</string>
    <string name="proximo">Próximo</string>
    <string name="anterior">Anterior</string>

    <!-- Descrições de imagens -->
    <string name="grafico_interfase">Gráfico Intérfase</string>

    <!-- Títulos em caixa alta -->
    <string name="interfase_titulo">INTÉRFASE</string>
    <string name="profase_titulo">PRÓFASE</string>
    <string name="metafase_titulo">METÁFASE</string>
    <string name="anafase_titulo">ANÁFASE</string>
    <string name="telofase_titulo">TELÓFASE</string>

    <!-- Títulos normais -->
    <string name="afinal_para_que_server_a_mitose">Afinal, para que server a mitose?</string>

    <!-- Conteúdo -->
    <string name="oque_eh_interfase">
        Fase que precede qualquer divisão celular. Ocorre a duplicação do DNA e a formação de cromossomos duplos.
    </string>

    <string name="interfase_fases">
        Possui três subfaseses\n
        <b>G1</b>: pré-síntese (cromossomos simples)\n
        <b>B</b>: Síntese de DNA\n
        <b>G2</b>: Pós-síntese (cromossomos duplos)
    </string>

    <string name="profase_etapas">
        <ol>
            <li>O DNA desespiralizado fica disposto na célula de maneira desorganizada.</li>\n
            <li>Início da espiralização do DNA para formar os cromossomos.</li>\n
            <li>Duplicação dos centríolos (formação do 2º par).</li>\n
            <li>Migração dos centríolos para os pólos opostos da célula.</li>\n
            <li>Rompimento e degeneração da carioteca.</li>\n
        </ol>
    </string>
    
    <string name="metafase_etapas">
        <ol>
            <li>Grau máximo de espiralização dos cromossomos (visíveis ao M.O.)</li>\n
            <li>Cromossomos duplos alinhados lado a lado no equador da célula.</li>\n
            <li>Centríolos dispostos nos pólos opostos da célula.</li>\n
            <li>No final da metáfase ocorre a divisão dos centrômeros.</li>\n
        </ol>
    </string>

    <string name="anafase_etapas">
        <ol>
            <li>Encurtamento das fibras do fuso.</li>\n
            <li>Cromossomos simples (cromátides irmãs) puxadas para os pólos da célula.</li>\n
            <li>Início da desespiralização dos cromossomos.</li>\n
        </ol>
    </string>

    <string name="telofase_etapas">
        <ol>
            <li>Ocorre a citocinese (divisão do citoplasma)</li>\n
            <li>Formação de duas células filhas contendo o mesmo número de cromossomos da célula mãe, porém simples.</li>\n
            <li>Formação de duas novas cariotecas e dois novos nucléolos.</li>\n
            <li>Cromossomos se desespiralizam e as fibras do fuso desaparecem.</li>\n
        </ol>
    </string>

    <string name="meiose_finalidade">
        <ol>
            <li>Crescimento e regeneração de tecidos</li>\n
            <li>Cicatrização</li>\n
            <li>Formação de gametas em vegetais</li>\n
            <li>Formação de gametas em animais por partenogênese</li>\n
            <li>Divisões do zigoto durante o desenvolvimento embrionário</li>\n
        </ol>
    </string>

</resources>
